[package]
name = "log-collector"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.14", features=["rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.7.1"
sysinfo = "0.30.5"

[[bin]]
name = "log_collector"
path = "src/main.rs"
